tests/it/wire/snapshots/it__wire__openai_chat__encodes_a_tool_round_trip.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/chat/completions",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "845"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "vendor/compat-chat-v2",
    "messages": [
      {
        "role": "user",
        "content": "What is the weather in Paris and Madrid?"
      },
      {
        "role": "assistant",
        "content": "Looking both up.",
        "tool_calls": [
          {
            "id": "call_paris",
            "type": "function",
            "function": {
              "name": "get_weather",
              "arguments": "{\"city\":\"Paris\"}"
            }
          },
          {
            "id": "call_madrid",
            "type": "function",
            "function": {
              "name": "get_weather",
              "arguments": "{\"city\":\"Madrid\"}"
            }
          }
        ]
      },
      {
        "role": "tool",
        "tool_call_id": "call_paris",
        "content": [
          {
            "type": "text",
            "text": "18C and clear",
            "cache_control": {
              "type": "ephemeral"
            }
          }
        ]
      },
      {
        "role": "tool",
        "tool_call_id": "call_madrid",
        "content": "the city is unknown"
      }
    ],
    "stream": false,
    "max_tokens": 128,
    "tools": [
      {
        "type": "function",
        "function": {
          "name": "get_weather",
          "description": "Reads the current weather for a city",
          "parameters": {
            "type": "object",
            "properties": {
              "city": {
                "type": "string"
              }
            },
            "required": [
              "city"
            ]
          }
        }
      }
    ]
  }
}
