tests/it/wire/snapshots/it__wire__openai_chat__encodes_both_image_sources-2.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "content": [
    {
      "text": "Hello.",
      "type": "text"
    }
  ],
  "finish_reason": "stop",
  "id": "chatcmpl-wire",
  "model": {
    "model": "compat-chat",
    "provider": "compat"
  },
  "raw": {
    "choices": [
      {
        "finish_reason": "stop",
        "index": 0,
        "message": {
          "content": "Hello.",
          "role": "assistant"
        }
      }
    ],
    "created": 1700000000,
    "id": "chatcmpl-wire",
    "model": "vendor/compat-chat-v2",
    "object": "chat.completion",
    "usage": {
      "completion_tokens": 5,
      "prompt_tokens": 11,
      "total_tokens": 16
    }
  },
  "usage": {
    "cache_read": 0,
    "cache_write": 0,
    "input": 11,
    "output": 5,
    "reasoning": 0
  }
}
