tests/it/wire/snapshots/it__wire__openai_chat__encodes_both_image_sources.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": [
          {
            "text": "Describe both images.",
            "type": "text"
          },
          {
            "image_url": {
              "detail": "high",
              "url": "https://example.com/cat.png"
            },
            "type": "image_url"
          },
          {
            "image_url": {
              "url": "data:image/png;base64,aW1hZ2UtYnl0ZXM="
            },
            "type": "image_url"
          }
        ],
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "stream": false
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "322"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
