tests/it/wire/snapshots/it__wire__openai_chat__encodes_reasoning_effort_untranslated.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "body": {
    "max_tokens": 128,
    "messages": [
      {
        "content": "Hello",
        "role": "user"
      }
    ],
    "model": "vendor/compat-chat-v2",
    "reasoning_effort": "xhigh"
  },
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "124"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
