tests/it/wire/snapshots/it__wire__openai_chat__encodes_replayed_reasoning_as_reasoning_content.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/chat/completions",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "318"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "vendor/compat-chat-v2",
    "messages": [
      {
        "role": "user",
        "content": [
          {
            "type": "text",
            "text": "Is 91 prime?",
            "cache_control": {
              "type": "ephemeral"
            }
          }
        ]
      },
      {
        "role": "assistant",
        "content": "No, 91 is not prime.",
        "reasoning_content": "91 is 7 times 13."
      },
      {
        "role": "user",
        "content": "What about 97?"
      }
    ],
    "stream": false,
    "max_tokens": 128
  }
}
