tests/it/wire/snapshots/it__wire__openai_chat__encodes_sampling_controls_and_stop_sequences.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/chat/completions",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "178"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "vendor/compat-chat-v2",
    "messages": [
      {
        "role": "user",
        "content": "Write one sentence."
      }
    ],
    "stream": false,
    "max_tokens": 128,
    "temperature": 0.7,
    "top_p": 0.9,
    "stop": [
      "END",
      "STOP"
    ]
  }
}
