tests/it/wire/snapshots/it__wire__openai_chat__encodes_tool_choice_auto.snap
---
source: tests/it/wire/openai_chat.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/v1/chat/completions",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "authorization",
      "[redacted]"
    ],
    [
      "content-length",
      "683"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "user-agent",
      "[user-agent]"
    ]
  ],
  "body": {
    "model": "vendor/compat-chat-v2",
    "messages": [
      {
        "role": "system",
        "content": [
          {
            "type": "text",
            "text": "Use the tools when they help.",
            "cache_control": {
              "type": "ephemeral"
            }
          }
        ]
      },
      {
        "role": "user",
        "content": "What is the weather in Paris?"
      }
    ],
    "stream": false,
    "max_tokens": 128,
    "tools": [
      {
        "type": "function",
        "function": {
          "name": "get_weather",
          "description": "Reads the current weather for a city",
          "parameters": {
            "type": "object",
            "properties": {
              "city": {
                "type": "string"
              }
            },
            "required": [
              "city"
            ]
          }
        }
      },
      {
        "type": "function",
        "function": {
          "name": "get_time",
          "description": "Reads the current time in a time zone",
          "parameters": {
            "type": "object",
            "properties": {
              "zone": {
                "type": "string"
              }
            },
            "required": [
              "zone"
            ]
          }
        }
      }
    ],
    "tool_choice": "auto"
  }
}
